# fis-tool

./: .fis_config.yaml  .gitignore  .replit  LLM_Instruction.md  README.md  fis_tool.py  instruction.py  pyproject.toml
.github/workflows/: release.yml
src/: fis_config.py  fis_tool.py  instruction.py  interactive_main.py  interactive_prj.py  itv_flow.py  prj_forge.py  setting.py  utils.py
src/chat_models/: base.py  chatgpt.py  gemini.py  gemini_patch.py
src/options/: base.py  choices.py
